[package]
name = "token_guardian"
version = "0.1.0"
edition = "2021"
description = "Token optimization layer for AI coding agents via MCP server"
license = "MIT"

[dependencies]
# MCP Protocol
rust-mcp-sdk = { version = "0.8", default-features = false, features = ["server", "macros", "stdio"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Cache storage
sled = "0.34"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
